added utility for the button.

--- a/scripts/groove_selection_dashboard.ipynb
+++ b/scripts/groove_selection_dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "from ipywidgets import Checkbox, VBox, HBox, Label, Text, AppLayout, Button, Layout\n",
-    "from IPython.display import clear_output\n",
+    "from IPython.display import clear_output, display\n",
     "\n",
     "import weldx\n",
     "from weldx.constants import WELDX_QUANTITY as Q_\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5331683b9223408ebe9fef3f5c597bc6",
+       "model_id": "e697cd4ddffa4d49bc9e05c9aefdd34c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -142,6 +142,7 @@
     "groove_dict[\"FrontalFaceGroove\"] = [\"workpiece_thickness\", \"workpiece_thickness2\", \"groove_angle\", \"root_gap\", \"root_face\", \"special_depth\", \"code_number\"]\n",
     "\n",
     "o = widgets.Output(layout=plot_layout)\n",
+    "#global actual_groove\n",
     "actual_groove = None\n",
     "        \n",
     "def update_plot(change):\n",
@@ -156,8 +157,9 @@
     "                else:\n",
     "                    get_groove_dict[child.children[0].value[:-2]] = Q_(child.children[1].value, child.children[2].value)\n",
     "\n",
+    "            global actual_groove\n",
     "            actual_groove = get_groove(**get_groove_dict)\n",
-    "            actual_groove.plot()\n",
+    "            actual_groove.plot(line_style=\"-\")\n",
     "            plt.show()\n",
     "    else:\n",
     "        with o:\n",
@@ -174,9 +176,11 @@
     "\n",
     "def on_button_clicked(b):\n",
     "    with button_o:\n",
+    "        print(\"clicked\")\n",
     "        clear_output()\n",
-    "        buffer = weldx.asdf.utils._write_buffer(actual_groove)\n",
-    "        weldx.asdf.utils.notebook_fileprinter(buffer)\n",
+    "        tree = {\"groove\" : actual_groove}\n",
+    "        buffer = weldx.asdf.utils._write_buffer(tree)\n",
+    "        display(weldx.asdf.utils.notebook_fileprinter(buffer))\n",
     "        \n",
     "# observe\n",
     "groovetype_dropdown.observe(remove_not_selected, names='value')\n",
@@ -198,13 +202,7 @@
     "result = VBox([HBox([groove_selection, o]), save_as_asdf, button_o])\n",
     " \n",
     "display(result)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# TODO: code_number should change the choosen attributes or disable those not needed?!\n",
-    "# TODO: add layout - even out the boxes...\n",
-    "# TODO: asdf save button"
+    "# TODO: code_number should change the choosen attributes or disable those not needed?!"
    ]
   },
   {
