adjust box height. units are now observed!

--- a/scripts/groove_selection_dashboard.ipynb
+++ b/scripts/groove_selection_dashboard.ipynb
@@ -28,19 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_layout = Layout(width=\"60%\", height=\"350px\")\n",
     "button_layout = Layout(width=\"200px\", height=\"50px\")\n",
-    "textbox_layout = Layout(width=\"15%\", height=\"25px\")\n",
-    "description_layout = Layout(width=\"30%\", height=\"25px\")"
+    "textbox_layout = Layout(width=\"15%\", height=\"30px\")\n",
+    "description_layout = Layout(width=\"30%\", height=\"30px\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e697cd4ddffa4d49bc9e05c9aefdd34c",
+       "model_id": "29e9e60aa9ec4996828b6c274fbeba99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -185,8 +185,10 @@
     "# observe\n",
     "groovetype_dropdown.observe(remove_not_selected, names='value')\n",
     "groovetype_dropdown.observe(update_plot, \"value\")\n",
-    "for _, box in hbox_dict.items():\n",
+    "for key, box in hbox_dict.items():\n",
     "    box.children[1].observe(update_plot, \"value\")\n",
+    "    if key != \"code_number\":\n",
+    "        box.children[2].observe(update_plot, \"value\")\n",
     "\n",
     "\n",
     "# button\n",
