update API and ASDF documentation

--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -48,7 +48,7 @@
     "import weldx\n",
     "from weldx import Q_ as Quantity  # pint quantity from the weldx package\n",
     "from weldx.asdf.extension import WeldxAsdfExtension, WeldxExtension\n",
-    "from weldx.asdf.tags.weldx.core.iso_groove import get_groove"
+    "from weldx.welding.groove.iso_9692_1 import get_groove"
    ]
   },
   {
@@ -97,7 +97,7 @@
     "\n",
     "Note: All classes can also be created separately with the classes, but this is not recommended.\n",
     "```Python\n",
-    "from weldx.asdf.tags.weldx.core.iso_groove import VGroove\n",
+    "from weldx.welding.groove.iso_9692_1 import VGroove\n",
     "\n",
     "v_groove = VGroove(t, alpha, c, b)\n",
     "```\n",
@@ -245,7 +245,7 @@
    "outputs": [],
    "source": [
     "# generate test grooves\n",
-    "from weldx.asdf.tags.weldx.core.iso_groove import _create_test_grooves\n",
+    "from weldx.welding.groove.iso_9692_1 import _create_test_grooves\n",
     "\n",
     "groove_dict = _create_test_grooves()\n",
     "for k in [\"dv_groove2\", \"dv_groove3\", \"du_groove2\", \"du_groove3\", \"du_groove4\"]:\n",
@@ -254,6 +254,13 @@
     "for k, v in groove_dict.items():\n",
     "    v[0].plot(line_style=\"-\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -272,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
