--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx.asdf.tags.weldx.core.iso_groove import get_groove\n",
+    "from weldx.welding.groove.iso_9692_1 import get_groove\n",
     "\n",
     "groove = get_groove(\n",
     "    groove_type=\"VGroove\",\n",
