update changelog and move GmawProcess classes, reorder inits

--- a/tutorials/GMAW_process.ipynb
+++ b/tutorials/GMAW_process.ipynb
@@ -35,7 +35,7 @@
     "from weldx import Q_\n",
     "from weldx.asdf.extension import WeldxAsdfExtension, WeldxExtension\n",
     "from weldx.core import TimeSeries as TS\n",
-    "from weldx.welding import GmawProcess"
+    "from weldx.welding.processes import GmawProcess"
    ]
   },
   {
@@ -146,15 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "buffer = weldx.asdf.utils._write_buffer(tree)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "buffer = weldx.asdf.utils._write_buffer(tree)\n",
     "weldx.asdf.utils.notebook_fileprinter(buffer)"
    ]
   },
@@ -184,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
