hide magic command code cells in nbsphinx

--- a/tutorials/GMAW_process.ipynb
+++ b/tutorials/GMAW_process.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# if the package is not installed in your python environment, run this to execute the notebook directly from inside the GitHub repository\n",
@@ -184,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
