--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -28,6 +28,7 @@
     "jupyter": {
      "outputs_hidden": false
     },
+    "nbsphinx": "hidden",
     "pycharm": {
      "name": "#%%\n"
     }
@@ -472,24 +473,6 @@
     "geometry_custom_interp.plot(profile_raster_width=Q_(1, \"cm\"),\n",
     "                            trace_raster_width=Q_(2, \"cm\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
