--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# if the package is not installed in your python environment, run this to execute the notebook directly from inside the GitHub repository\n",
@@ -22,7 +24,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# enable interactive plots on Jupyterlab with ipympl and jupyterlab-matplotlib installed\n",
@@ -963,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
