--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -28,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# if the package is not installed in your python environment, run this to execute the notebook directly from inside the GitHub repository\n",
@@ -143,6 +145,7 @@
     "As explained above you see that this V-groove has two halves and a V-Groove layout. The plot scaling is always in `millimeter`.\n",
     "\n",
     "The `plot` method has the following attributes:\n",
+    "\n",
     "* `title`\n",
     "\n",
     "    Setting from matplotlib. Default: `None`\n",
@@ -272,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
