--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# if the package is not installed in your python environment, run this to execute the notebook directly from inside the GitHub repository\n",
@@ -28,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# enable interactive plots on Jupyterlab with ipympl and jupyterlab-matplotlib installed\n",
@@ -77,6 +81,7 @@
     "We start of defining our welding application example by defining the base groove shape. For this examples we assume the groove shape to be constant along the entire workpiece.\n",
     "\n",
     "The groove shall have the following attributes:\n",
+    "\n",
     "- a workpiece thickness of 5 mm\n",
     "- a single sided V-Groove butt weld with 50 degree groove angle\n",
     "- root gap and face of 1 mm\n",
@@ -127,6 +132,7 @@
     "Once we have created our desired 2d groove shape, we can simply extend the groove shape into 3d-space to create a volumetric workpiece.\n",
     "\n",
     "To do this, two steps are missing:\n",
+    "\n",
     "1. we have to decide on a weld seam length first (we will use 300 mm in this example)\n",
     "2. create a trace object that defines the path of our element though space. (we use a simple linear trace in this example)"
    ]
@@ -193,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "def ax_setup(ax):\n",
@@ -206,7 +214,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "fig = plt.figure()\n",
