groove schema refactor (#181)
* update docs
* add groove types and simplify ASDF Type name and class association
* define WELDX_TAG_BASE
* add __post_init__ methods
* add pint dimensionality check decorator
* add ureg_check_class decorator
* accept multiple arguments and add docstring
* add `# noinspection PyUnresolvedReferences` flags for false positive PyCharm dataclass docstring errors
* dynamically create type mapping
* move parameter mapping to class
* update dcostring format
* update get_groove docstring
* directory refactor
* update API and ASDF documentation
* update changelog 
* move GmawProcess classes
* reorder inits

--- a/tutorials/GMAW_process.ipynb
+++ b/tutorials/GMAW_process.ipynb
@@ -37,7 +37,7 @@
     "from weldx import Q_\n",
     "from weldx.asdf.extension import WeldxAsdfExtension, WeldxExtension\n",
     "from weldx.core import TimeSeries as TS\n",
-    "from weldx.welding import GmawProcess"
+    "from weldx.welding.processes import GmawProcess"
    ]
   },
   {
@@ -148,15 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "buffer = weldx.asdf.utils._write_buffer(tree)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "buffer = weldx.asdf.utils._write_buffer(tree)\n",
     "weldx.asdf.utils.notebook_fileprinter(buffer)"
    ]
   },
