--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -50,7 +50,7 @@
     "import weldx\n",
     "from weldx import Q_ as Quantity  # pint quantity from the weldx package\n",
     "from weldx.asdf.extension import WeldxAsdfExtension, WeldxExtension\n",
-    "from weldx.asdf.tags.weldx.core.iso_groove import get_groove"
+    "from weldx.welding.groove.iso_9692_1 import get_groove"
    ]
   },
   {
@@ -99,7 +99,7 @@
     "\n",
     "Note: All classes can also be created separately with the classes, but this is not recommended.\n",
     "```Python\n",
-    "from weldx.asdf.tags.weldx.core.iso_groove import VGroove\n",
+    "from weldx.welding.groove.iso_9692_1 import VGroove\n",
     "\n",
     "v_groove = VGroove(t, alpha, c, b)\n",
     "```\n",
@@ -248,7 +248,7 @@
    "outputs": [],
    "source": [
     "# generate test grooves\n",
-    "from weldx.asdf.tags.weldx.core.iso_groove import _create_test_grooves\n",
+    "from weldx.welding.groove.iso_9692_1 import _create_test_grooves\n",
     "\n",
     "groove_dict = _create_test_grooves()\n",
     "for k in [\"dv_groove2\", \"dv_groove3\", \"du_groove2\", \"du_groove3\", \"du_groove4\"]:\n",
@@ -257,6 +257,13 @@
     "for k, v in groove_dict.items():\n",
     "    v[0].plot(line_style=\"-\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
