use relative schema path

--- a/scripts/welding_schema.ipynb
+++ b/scripts/welding_schema.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd -q"
+    "%cd -q .."
    ]
   },
   {
@@ -346,16 +346,9 @@
     "           )\n",
     "\n",
     "\n",
-    "buffer = weldx.asdf.utils._write_buffer(tree,asdffile_kwargs=dict(custom_schema=\"C:/Python/weldx/weldx/asdf/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml\"))\n",
+    "buffer = weldx.asdf.utils._write_buffer(tree,asdffile_kwargs=dict(custom_schema=\"./weldx/asdf/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml\"))\n",
     "weldx.asdf.utils.notebook_fileprinter(buffer)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
