--- a/scripts/welding_schema.ipynb
+++ b/scripts/welding_schema.ipynb
@@ -217,7 +217,7 @@
     "HKS_sensor.sources = []\n",
     "HKS_sensor.sources.append(src_current)\n",
     "\n",
-    "from weldx.asdf.tags.weldx.core.mathematical_expression import MathematicalExpression\n",
+    "from weldx.core import MathematicalExpression\n",
     "\n",
     "[a, x, b] = sympy.symbols(\"a x b\")\n",
     "current_AD_func = MathematicalExpression(a * x + b)\n",
