add GMAW process and shielding gas

--- a/scripts/welding_schema.ipynb
+++ b/scripts/welding_schema.ipynb
@@ -25,6 +25,7 @@
     "# some python imports that will be used throughout the tutorial\n",
     "import numpy as np\n",
     "\n",
+    "import asdf\n",
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
     "import pandas as pd\n",
@@ -325,6 +326,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## GMAW Process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from weldx.welding.processes import GmawProcess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params_pulse = dict(\n",
+    "    wire_feedrate=Q_(10.0, \"m/min\"),\n",
+    "    pulse_voltage=Q_(40.0, \"V\"),\n",
+    "    pulse_duration=Q_(5.0, \"ms\"),\n",
+    "    pulse_frequency=Q_(100.0, \"Hz\"),\n",
+    "    base_current=Q_(60.0, \"A\"),\n",
+    ")\n",
+    "process_pulse = GmawProcess(\n",
+    "    \"pulse\",\n",
+    "    \"CLOOS\",\n",
+    "    \"Quinto\",\n",
+    "    params_pulse,\n",
+    "    tag=\"CLOOS/pulse\",\n",
+    "    meta={\"modulation\": \"UI\"},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from weldx.asdf.tags.weldx.aws.process.gas_component import GasComponent\n",
+    "from weldx.asdf.tags.weldx.aws.process.shielding_gas_for_procedure import ShieldingGasForProcedure\n",
+    "from weldx.asdf.tags.weldx.aws.process.shielding_gas_type import ShieldingGasType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gas_comp = [\n",
+    "    GasComponent(\"argon\", Q_(82, \"percent\")),\n",
+    "    GasComponent(\"carbon dioxide\", Q_(18, \"percent\")),\n",
+    "]\n",
+    "gas_type = ShieldingGasType(gas_component=gas_comp, common_name=\"SG\")\n",
+    "\n",
+    "gas_for_procedure = ShieldingGasForProcedure(\n",
+    "    use_torch_shielding_gas=True,\n",
+    "    torch_shielding_gas=gas_type,\n",
+    "    torch_shielding_gas_flowrate=Q_(20, \"l / min\"),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process = dict(welding_process=process_pulse, shielding_gas=gas_for_procedure)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## ASF file"
    ]
   },
@@ -342,12 +421,28 @@
     "    welding_voltage = voltage_calib_transform.output_signal,\n",
     "    coordinate_systems = csm,\n",
     "    geometry = geometry,\n",
+    "    process = process,\n",
     "    meta = {\"welder\": \"A.W. Elder\"},\n",
     "           )\n",
     "\n",
     "\n",
     "buffer = weldx.asdf.utils._write_buffer(tree,asdffile_kwargs=dict(custom_schema=\"./weldx/asdf/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml\"))\n",
     "weldx.asdf.utils.notebook_fileprinter(buffer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"schema_example_01.asdf\"\n",
+    "\n",
+    "with asdf.AsdfFile(\n",
+    "    tree,\n",
+    "    ignore_version_mismatch=False,\n",
+    ") as ff:\n",
+    "    ff.write_to(filename)"
    ]
   }
  ],
