doc restructure and cleanup

--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Welding Example #01: Basics\n",
-    "The goal of this small examples is to introduce the main functionalities and interfaces to create and describe a simple welding application using the WelDX package."
+    "The goal of this small example is to introduce the main functionalities and interfaces to create and describe a simple welding application using the WelDX package."
    ]
   },
   {
