--- a/tutorials/experiment_design_01.ipynb
+++ b/tutorials/experiment_design_01.ipynb
@@ -80,15 +80,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time = pd.timedelta_range(\"0s\",\"10s\",freq=\"100ms\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def sine_lcs(time, f=Q_(1,\"Hz\"), amp=Q_([[0,1,0]],\"mm\"), bias=None):\n",
     "    \"\"\"Create an interpolated sine LCS\"\"\"\n",
     "    ts_sine = ut._sine(f=f,amp=amp, bias=bias)\n",
@@ -106,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def distance(ptc,lcs_name,time=time):\n",
+    "def distance(ptc,lcs_name,time):\n",
     "    \"\"\"Calcualate minimal distance between pointcloud and 3D trace\"\"\"\n",
     "    \n",
     "    lcs_interp = csm.get_cs(coordinate_system_name=lcs_name,reference_system_name=\"workpiece\",time=time)\n",
@@ -126,6 +117,15 @@
    "metadata": {},
    "source": [
     "## Trace and CSM setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time = pd.timedelta_range(\"0s\",\"10s\",freq=\"50ms\")"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## add z weaving"
+    "### add z weaving"
    ]
   },
   {
@@ -267,7 +267,7 @@
     "# create 3d workpiece geometry from the groove profile and trace objects\n",
     "geometry = geo.Geometry(profile=v_profile, trace=trace)\n",
     "pointcloud_I = geometry.rasterize(profile_raster_width=Q_(1, \"mm\"),\n",
-    "                 trace_raster_width=Q_(1, \"mm\"))"
+    "                 trace_raster_width=Q_(0.5, \"mm\"))"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = distance(pointcloud_I,\"tcp_sine_y\")\n",
+    "d = distance(pointcloud_I,\"tcp_sine_y\",time=time)\n",
     "plt.plot(d)"
    ]
   },
@@ -323,7 +323,7 @@
     "\n",
     "# create 3d workpiece geometry from the groove profile and trace objects\n",
     "geometry = geo.Geometry(profile=v_profile, trace=trace)\n",
-    "pointcloud_V = geometry.rasterize(profile_raster_width=Q_(0.1, \"mm\"),\n",
+    "pointcloud_V = geometry.rasterize(profile_raster_width=Q_(0.25, \"mm\"),\n",
     "                 trace_raster_width=Q_(0.5, \"mm\"))"
    ]
   },
@@ -333,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = distance(pointcloud_V,\"tcp_sine_z\")\n",
+    "d = distance(pointcloud_V,\"tcp_sine_z\",time=time)\n",
     "plt.plot(d)"
    ]
   }
