--- a/tutorials/experiment_design_01.ipynb
+++ b/tutorials/experiment_design_01.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +72,65 @@
    "metadata": {},
    "source": [
     "## helper functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts_sine = ut._sine(f=Q_(1,\"Hz\"), amp=Q_([[0,1,0]],\"mm\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = Q_(3,\"m\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>3000.0</pre> millimeter"
+      ],
+      "text/latex": [
+       "$\\begin{pmatrix}3000.0\\end{pmatrix}\\ \\mathrm{millimeter}$"
+      ],
+      "text/plain": [
+       "array(3000.) <Unit('millimeter')>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.to(\"mm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lcs_coords_from_ts(ts,time):\n",
+    "    ts_data = ts.interp_time(time = time)\n",
+    "    # assign vector coordinates and convert to mm\n",
+    "    ts_data = ts_data.rename({\"dim_1\": \"c\"}).assign_coords({\"c\": [\"x\", \"y\", \"z\"]})\n",
+    "    ts_data.data = ts_data.data.to(\"mm\").magnitude\n",
+    "    ts_data[\"time\"] = pd.TimedeltaIndex(ts_data[\"time\"].data)\n",
+    "    return lcs(coordinates=ts_data)"
    ]
   },
   {
