update example description, add _lcs_coords_from_ts function

--- a/tutorials/experiment_design_01.ipynb
+++ b/tutorials/experiment_design_01.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,6 @@
     "import numpy as np\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import networkx as nx\n",
     "import pandas as pd\n",
     "import pint\n",
     "import xarray as xr\n",
@@ -51,19 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# importing the weldx package with prevalent default abbreviations\n",
     "import weldx\n",
     "import weldx.geometry as geo\n",
-    "import weldx.transformations as tf\n",
     "import weldx.utility as ut\n",
-    "import weldx.visualization as vis\n",
     "from weldx import Q_\n",
-    "from weldx.transformations import LocalCoordinateSystem as lcs\n",
-    "from weldx.transformations import WXRotation\n",
+    "from weldx.transformations import LocalCoordinateSystem as LCS\n",
     "from weldx.welding.groove.iso_9692_1 import get_groove"
    ]
   },
@@ -76,88 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ts_sine = ut._sine(f=Q_(1,\"Hz\"), amp=Q_([[0,1,0]],\"mm\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = Q_(3,\"m\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre>3000.0</pre> millimeter"
-      ],
-      "text/latex": [
-       "$\\begin{pmatrix}3000.0\\end{pmatrix}\\ \\mathrm{millimeter}$"
-      ],
-      "text/plain": [
-       "array(3000.) <Unit('millimeter')>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.to(\"mm\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def lcs_coords_from_ts(ts,time):\n",
-    "    ts_data = ts.interp_time(time = time)\n",
-    "    # assign vector coordinates and convert to mm\n",
-    "    ts_data = ts_data.rename({\"dim_1\": \"c\"}).assign_coords({\"c\": [\"x\", \"y\", \"z\"]})\n",
-    "    ts_data.data = ts_data.data.to(\"mm\").magnitude\n",
-    "    ts_data[\"time\"] = pd.TimedeltaIndex(ts_data[\"time\"].data)\n",
-    "    return lcs(coordinates=ts_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sine_lcs(time, f=Q_(1,\"Hz\"), amp=Q_([[0,1,0]],\"mm\"), bias=None):\n",
-    "    \"\"\"Create an interpolated sine LCS\"\"\"\n",
-    "    ts_sine = ut._sine(f=f,amp=amp, bias=bias)\n",
-    "    ts_sine_data = ts_sine.interp_time(time = time)\n",
-    "    # assign vector coordinates and convert to m\n",
-    "    ts_sine_data = ts_sine_data.rename({\"dim_1\": \"c\"}).assign_coords({\"c\": [\"x\", \"y\", \"z\"]})\n",
-    "    ts_sine_data.data = ts_sine_data.data.magnitude\n",
-    "    ts_sine_data[\"time\"] = pd.TimedeltaIndex(ts_sine_data[\"time\"].data)\n",
-    "    return lcs(coordinates=ts_sine_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance(ptc,lcs_name,time):\n",
-    "    \"\"\"Calcualate minimal distance between pointcloud and 3D trace\"\"\"\n",
+    "    \"\"\"Calcualate minimal distance between geometry rasterization pointcloud and 3D trace\"\"\"\n",
     "    \n",
     "    lcs_interp = csm.get_cs(coordinate_system_name=lcs_name,reference_system_name=\"workpiece\",time=time)\n",
     "    \n",
@@ -179,12 +99,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets define the timestamps that we will use to visualize our experiment:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "time = pd.timedelta_range(\"0s\",\"10s\",freq=\"50ms\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this example we will be working with a linear weld seam of 100 mm ."
    ]
   },
   {
@@ -198,6 +132,16 @@
     "\n",
     "trace_segment = geo.LinearHorizontalTraceSegment(seam_length)\n",
     "trace = geo.Trace(trace_segment)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We set up the following coordinate systems:\n",
+    "- the default `base` system\n",
+    "- a `workpiece` system that corresponds to the baseline of our workpiece\n",
+    "- a `tcp_wire` system that represents the very simple case of moving along the weld seam 2 mm above the `workpiece` system with a weld speed of 10 mm/s"
    ]
   },
   {
@@ -230,8 +174,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tcp_start_point = Q_([0.0, 0.0, 0.0], \"mm\")\n",
-    "tcp_end_point = np.append(seam_length, Q_([0, 0], \"mm\"))\n",
+    "tcp_start_point = Q_([0.0, 0.0, 2.0], \"mm\")\n",
+    "tcp_end_point = np.append(seam_length, Q_([0, 2.0], \"mm\"))\n",
     "\n",
     "v_weld = Q_(10, \"mm/s\")\n",
     "s_weld = (tcp_end_point - tcp_start_point)[0]  # length of the weld\n",
@@ -242,7 +186,7 @@
     "\n",
     "coords = [tcp_start_point.magnitude, tcp_end_point.magnitude]\n",
     "\n",
-    "tcp_wire = lcs(coordinates=coords, time=[t_start, t_end])\n",
+    "tcp_wire = LCS(coordinates=coords, time=[t_start, t_end])\n",
     "\n",
     "# add the workpiece coordinate system\n",
     "csm.add_cs(\n",
@@ -256,7 +200,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### add y weaving"
+    "### add weaving motions\n",
+    "We now want two define and add two different weaving motions, one in y-direction (towards the groove sidewalls) and another on in z-direction (up and down).\n",
+    "#### add y weaving"
    ]
   },
   {
@@ -265,14 +211,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csm.add_cs(coordinate_system_name=\"tcp_sine_y\", reference_system_name=\"tcp_wire\", lcs=sine_lcs(time,f=Q_(1,\"Hz\"), amp=Q_([[0,1,0]],\"mm\"), bias=None))"
+    "sine_y = ut._sine(f=Q_(1,\"Hz\"), amp=Q_([[0,1,0]],\"mm\"))\n",
+    "coords = ut._lcs_coords_from_ts(sine_y,time)\n",
+    "csm.add_cs(coordinate_system_name=\"tcp_sine_y\", reference_system_name=\"tcp_wire\", lcs=LCS(coordinates=coords))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### add z weaving"
+    "#### add z weaving"
    ]
   },
   {
@@ -281,7 +229,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csm.add_cs(coordinate_system_name=\"tcp_sine_z\", reference_system_name=\"tcp_wire\", lcs=sine_lcs(time,f=Q_(1,\"Hz\"), amp=Q_([[0,0,2]],\"mm\"),bias=Q_([0,0,2],\"mm\")))"
+    "sine_z = ut._sine(f=Q_(1,\"Hz\"), amp=Q_([[0,0,2]],\"mm\"),bias=Q_([0,0,0],\"mm\"))\n",
+    "coords = ut._lcs_coords_from_ts(sine_z,time)\n",
+    "csm.add_cs(coordinate_system_name=\"tcp_sine_z\", reference_system_name=\"tcp_wire\", lcs=LCS(coordinates=coords))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's visualize the different coordinate systems."
    ]
   },
   {
@@ -297,7 +254,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## generate I-Groove pointcloud"
+    "## generate I-Groove pointcloud\n",
+    "Let's finish the workpiece creation by adding groove profiles to the start end end of the welding trace.\n",
+    "\n",
+    "For the first example we will use I-Groove profiles and have the root gap open up along the weld seam from 2 mm to 6 mm."
    ]
   },
   {
@@ -315,7 +275,7 @@
     "groove_2 = get_groove(\n",
     "    groove_type=\"IGroove\",\n",
     "    workpiece_thickness=Q_(5, \"mm\"),\n",
-    "    root_gap=Q_(12, \"mm\"),\n",
+    "    root_gap=Q_(6, \"mm\"),\n",
     ")\n",
     "\n",
     "v_profile = geo.VariableProfile([groove_1.to_profile(), groove_2.to_profile()],\n",
@@ -330,10 +290,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groove_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groove_2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate distance (simple trace)"
+    "## Calculate distance (simple trace in I-Groove center)\n",
+    "The first analysis example is very simple and used to check if our tools work as expected.\n",
+    "\n",
+    "If the wire TCP moves on a straight line along the groove center, the distance to the workpiece geometry is equivalent to the distance of each sidewall to the groove center. Since the root gap of the groove changes linearly from 2 mm to 6 mm, we expect the distance to change from 1 mm to 3 mm accordingly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = distance(pointcloud_I,\"tcp_wire\",time=time)\n",
+    "plt.plot(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate distance (y-weaving in I-Groove)\n",
+    "Now let's analyze the distance when weaving along the y-axis (towards the sidewalls).\n",
+    "We can see the expected superposition of the weaving motion with the opening of the root gap.\n",
+    "Note the doubling of the observed frequency with regards to the weaving frequency of 1 Hz because we calculate the minimum distance instead of the distance to each sidewall separately."
    ]
   },
   {
@@ -350,7 +351,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate V-Groove geometry"
+    "If we analyze the weaving motion in z-direction alongside the I-Groove, we see no change in distance depending on the z-Position as expected.\n",
+    "The small disturbances are due to the coarse rasterisation of the workpiece geometry."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = distance(pointcloud_I,\"tcp_sine_z\",time=time)\n",
+    "plt.plot(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate V-Groove geometry\n",
+    "Lets look a more complex interaction of groove shapes and TCP motion.\n",
+    "\n",
+    "For this example we define two V-Groove profiles that begin at a groove angle of 60 degree with a root face and root gap of 1 mm each. At the end of the weld seam thee groove shape changes to a steep 20 degree angle with a root gap and root face of 3 mm."
    ]
   },
   {
@@ -371,8 +393,8 @@
     "    groove_type=\"VGroove\",\n",
     "    workpiece_thickness=Q_(5, \"mm\"),\n",
     "    groove_angle=Q_(20, \"deg\"),\n",
-    "    root_face=Q_(1.5, \"mm\"),\n",
-    "    root_gap=Q_(1, \"mm\"),\n",
+    "    root_face=Q_(3, \"mm\"),\n",
+    "    root_gap=Q_(3, \"mm\"),\n",
     ")\n",
     "\n",
     "v_profile = geo.VariableProfile([groove_1.to_profile(), groove_2.to_profile()],\n",
@@ -392,8 +414,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "groove_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groove_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's look at the CTWD with our previously defined weaving motion in z-direction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "d = distance(pointcloud_V,\"tcp_sine_z\",time=time)\n",
     "plt.plot(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are a few things to note:\n",
+    "\n",
+    "- as expected, we once again see the linear trend where the root gap opens as a baseline.\n",
+    "- in addition, the distance now consists of two distinct phases:\n",
+    "  - one phase where the TCP is \"submerged\" into the root face part of the weld. In this case, the distance is not impacted by the z weaving motion\n",
+    "  - the second phase, where the TCP is above the root face and the distance of the V shaped groove section is mimicking the z weaving motion.\n",
+    "- we can also see that the weaving motion reflection is more distinctly discernible if the groove opening angle is large."
    ]
   }
  ],
